Fix vertical alignment on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2482,6 +2482,10 @@ button:disabled,
 
 /* Magnific popup */
 
+.mfp-container {
+	height: calc(100vh) !important;
+}
+
 .mfp-zoom-out-cur {
 	overflow: hidden;
 }
